tests/validprograms/project/program01.tds
Program
{
  Int x = -10;
  
  Int f(Int x, Int y) {
    if(x == y) then {
        return x;
    }
    
    if(x < y) then {
        return f(x + 1, y);
    }
    
    return f(x, y + 1);
    return f(f(x - -1, y * 2), y + 1);
  }
  
  Int inc (Int x ) {
      return x + 1;
  }
  
  Int get_int() extern;
  
  void print(Int i) extern;
  
  void main()
  {
	Int i = 0;
	while(True) {
		print(i);
	}

      	if (0 < 1) then
        {
       		print(0);
        }
      	else 
        {
        	return print(inc(1));
        }
  }
}
