tests/invalidprograms/semantic/formal_and_real_parameters_dont_match.tds
Program {
	Int f(Int x, Int y) {
		return x + y - y;
	}

	void main() {
		f(True, 1);
	}
}

